# Localization-Translation-Utility

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Lang Translation.py  MineOS Lang Translate.py  README.md  agents.py  auto_trans.py  convert.py  csv_translate.py  extricate.py  lang_globs.py  language_translation.py  languages.py  lexer.py  local_lolcat.py  lolcat.py  mineos_auto_trans.py  pyproject.toml  requirements.txt  timeutils.py  translate.py  tranzlashun.json
.github/workflows/: tests.yml
examples/: csv_translate.py
old/: README.md  lang_globs.py  language_translation.py  translate.py
src/localization_translation/: __init__.py  agents.py  cli.py  convert.py  convert_parse.py  csv_translate.py  extricate.py  languages.py  lexer.py  local_lolcat.py  lolcat.py  lua_parser.py  mineos_auto_trans.py  timeutils.py  translate.py
tests/: test_convert_parse.py  test_extricate.py  test_parser.py
